--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>TeamB32</title>
+	<link rel="stylesheet"  href="stylesheet.css">
 </head>
 <body>
 <H1>Hello, World!</H1>
