--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>TeamB32</title>
-	<link rel="stylesheet"  href="stylesheet.css">
-</head>
-<body>
-<H1>Hello, World!</H1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  <body>
+    <header>
+    	<div class="container">
+      <div class="header-logo">
+      	<img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+      </div>
+      <div class="header-list">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Product</a></li>
+          <li><a href="">Category</a></li>
+        </ul>
+      </div>
+      <div class="header-right1">
+      	<a href="#" class="login">Log in</a>
+
+      </div>
+      
+      </div>
+    </header>
+
+   
+  </body>
 </html>
