--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       </div>
       <div class="header-right1">
       	<a href="#" class="login">Log in</a>
-
       </div>
-      
       </div>
     </header>
 
+<div class="top-wripper">
+	<div class="container"></div>
+</div>
    
   </body>
 </html>
