--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
       </div>
     </header>
 
-<div class="top-wripper">
-	<div class="container"></div>
+<div class="top-wrapper">
+	<div class="container">
+    <h1>Elegant & Glamour</h1>
+    <p>Temukan koleksi fashion anda dengan berbagai macam pilihan untuk</p>
+    <p>mendukung penampilan anda dimanapun dan kapanpun yang elegan</p>
+    <p>tampil berani dan berbeda</p>
+    <div class="btn-wrapper">
+      <a class="btn koleksi" href="#">Lihat Koleksi</a>
+    </div>
+  </div>
 </div>
    
   </body>
