update Signed-off-by: arooszfr <quthuzfr@gmail.com>

--- a/index.html
+++ b/index.html
@@ -27,14 +27,59 @@
 <div class="top-wrapper">
 	<div class="container">
     <h1>Elegant & Glamour</h1>
-    <p>Temukan koleksi fashion anda dengan berbagai macam pilihan untuk</p>
-    <p>mendukung penampilan anda dimanapun dan kapanpun yang elegan</p>
-    <p>tampil berani dan berbeda</p>
+    <p>Temukan koleksi fashion anda dengan berbagai macam pilihan.</p>
+    <p>Mendukung penampilan anda dimanapun dan kapanpun dengan elegan.</p>
+    <p>Tampil berani dan berbeda.</p>
     <div class="btn-wrapper">
       <a class="btn koleksi" href="#">Lihat Koleksi</a>
     </div>
   </div>
 </div>
-   
+<div class="list-wrapper">
+  <div class="container">
+    <div class="heading">
+      <h2>Produk Terbaru</h2>
+    </div>
+	<table style="table-layout:fixed; width:100%">
+    <tr>
+	<td align="center" style="padding-left:130px">
+        <td align="center">
+        <img class="gambar" src=img/produk1.jpg>
+		<br>
+        <p style="word-wrap: break-word;">nama produk</p>
+        <p style="word-wrap:break-word; color: crimson;">Rp.100</p>
+        <a class="btn beli" href="#" align="center">Beli Produk</a>
+		</td>
+	</td>
+	<td align="center" style="padding-left:130px">
+        <td align="center">
+        <img class="gambar" src=img/produk2.jpg>
+		<br>
+        <p style="word-wrap: break-word;">nama produk</p>
+        <p style="word-wrap: break-word; color: crimson;">Rp.200</p>
+        <a class="btn beli" href="#" align="center">Beli Produk</a>
+		</td>
+	</td>
+	<td align="center" style="padding-left:130px">
+        <td align="center">
+        <img class="gambar" src=img/produk3.jpg>
+		<br>
+        <p style="word-wrap: break-word;">nama produk</p>
+        <p style="word-wrap: break-word; color: crimson;">Rp.300</p>
+        <a class="btn beli" href="#" align="center">Beli Produk</a>
+		</td>
+	</td>
+	<td align="center" style="padding-left:130px">
+        <td align="center">
+        <img class="gambar" src=img/produk4.jpg>
+		<br>
+        <p style="word-wrap: break-word;">nama produk</p>
+        <p style="word-wrap: break-word; color: crimson;">Rp.400</p>
+        <a class="btn beli" href="#" align="center">Beli Produk</a>
+		</td>
+	</td>
+    </tr>
+	<tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+</div>   
   </body>
 </html>
