--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       </div>
       <div class="header-list">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Product</a></li>
-          <li><a href="">Category</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#produk_terbaru">Product</a></li>
+          <li><a href="#">Category</a></li>
         </ul>
       </div>
       <div class="header-right1">
@@ -35,7 +35,7 @@
     </div>
   </div>
 </div>
-<div class="list-wrapper">
+<div class="list-wrapper" id="produk_terbaru">
   <div class="container">
     <div class="heading">
       <h2>Produk Terbaru</h2>
