--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>Mendukung penampilan anda dimanapun dan kapanpun dengan elegan.</p>
     <p>Tampil berani dan berbeda.</p>
     <div class="btn-wrapper">
-      <a class="btn koleksi" href="#">Lihat Koleksi</a>
+      <a class="btn koleksi" href="#produk_terbaru">Lihat Koleksi</a>
     </div>
   </div>
 </div>
