--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
   <body>
     <header>
     	<div class="container">
-      <div class="header-logo">
-      	<img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-      </div>
-      <div class="header-list">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#produk_terbaru">Product</a></li>
-          <li><a href="#">Category</a></li>
-        </ul>
-      </div>
-      <div class="header-right1">
-      	<a href="#" class="login">Log in</a>
-      </div>
-      </div>
+    <div class="header-left">
+      <img class="logo" src="img/b32.jpg">  
+    </div>
+    <div class="header-right">
+      <a class="login" href="">Koleksi</a>
+      <a class="promo" href="">Promo</a>
+      <a class="jurnal" href="">Jurnal</a>
+      <a class="tentang" href="">Tentang Kami</a>
+    </div>
+  </div>
     </header>
 
 <div class="top-wrapper">
