--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
     	<div class="container">
     <div class="header-left">
-      <img class="logo" src="img/b32.jpg">  
+      <img class="logo" src="img/hed.jpg">  
     </div>
     <div class="header-right">
       <a class="login" href="">Koleksi</a>
