--- a/index.html
+++ b/index.html
@@ -114,12 +114,8 @@
         <div class="col-sm-3">
           <h4 class="title">Contact Us</h4>
             <ul class="social-icon">
-            <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
-            <a href="#" class="social"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+            <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
+            <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
             </ul>
             </div>
         <div class="col-sm-3">
