--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
         <div class="col-sm-3">
           <h4 class="title">Contact Us</h4>
             <ul class="social-icon">
-            <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
-            <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+              <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
+              <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+              <a href="#" class="btn youtube"><span class="fa fa-youtube"></span>Youtube</a>
+              <a href="#" class="btn email"><span class="fa fa-email"></span>Email</a>
             </ul>
             </div>
         <div class="col-sm-3">
