--- a/index.html
+++ b/index.html
@@ -113,12 +113,11 @@
         <div class="row">
         <div class="col-sm-3">
           <h4 class="title">Contact Us</h4>
-            <ul class="social-icon">
-              <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
-              <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
-              <a href="#" class="btn youtube"><span class="fa fa-youtube"></span>Youtube</a>
-              <a href="#" class="btn email"><span class="fa fa-email"></span>Email</a>
-            </ul>
+          <div class="btn-wrapper">
+          <a href="#" class="btn signup">Email</a>
+          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
+          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+        </div>
             </div>
         <div class="col-sm-3">
             <h4 class="title">My Account</h4>
