--- a/index.html
+++ b/index.html
@@ -165,5 +165,8 @@
         
         
     </footer>
+
+<script src="js/jquery-3.1.1.js"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
