--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>new</title>
+  <title>B.32-Toko Online Fashion</title>
   <link rel="stylesheet" href="stylesheet.css">
+  <link rel="shortcut icon" href="img/b32.jpg">
+  <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -12,12 +14,11 @@
       <img class="logo" src="img/hed.jpg">
     </div>
     <div class="header-right">
-      <a class="login" href="">Koleksi</a>
-      <a class="promo" href="">Promo</a>
-      <a class="jurnal" href="">Jurnal</a>
-      <a class="tentang" href="">Tentang Kami</a>
+      <a class="login" href="#Koleksi">Koleksi</a>
+      <a class="promo" href="#Promo">Promo</a>
+      <a class="jurnal" href="#Jurnal">Jurnal</a>
+      <a class="tentang" href="#tentang">Tentang Kami</a>
     </div>
-
   </div>
 </header>
 <div class="top-wrapper">
@@ -27,86 +28,104 @@
     <p>Mendukung penampilan anda dimanapun dan kapanpun dengan elegan.</p>
     <p>Tampil berani dan berbeda.</p>
 
-<div class="btn-wrapper">
-  <a class="btn koleksi" href="#produk_terbaru">Lihat Koleksi</a>
+  <div class="btn-wrapper">
+    <a class="btn koleksi" href="#produk_terbaru">Lihat Koleksi</a>
+  </div>
+  </div>
 </div>
-</div>
+<!--KONTEN-->
 
-</div>
-
- <div class="lesson-wrapper">
-  <div class="container">
-    <div class="heading">
-      <h2>Produk Terbaru</h2>
+  <div class="lesson-wrapper">
+    <div class="judul">
+      <div class="heading">
+        <h2>Produk Terbaru</h2>
+      </div>
     </div>
     <div class="lessons">
-
       <div class="lesson">
-            <div class="lesson-icon">
-              <img src="img/gamis laki 1 edit.jpg" alt="html" />
-
-            </div>
-            <p style="word-wrap: break-word;">Brown</p>
+        <div class="lesso">
+        <div class="lesson-icon">
+          <img style="width:100%;"src="img/gamis laki 1 edit.jpg" alt="html" />
+        </div>
+        <p style="word-wrap: break-word;">Brown</p>
         <p style="word-wrap:break-word; color: crimson;">Rp.150.000</p>
         <a class="btn beli" href="#" align="center">Beli Produk</a>
-          </div>
+        </div>
+      </div>
 
-    <div class="lesson">
-            <div class="lesson-icon">
-              <img src="img/gamis pr 1 edit.jpg" alt="html" />
-
-            </div>
-            <p style="word-wrap: break-word;">Light Grey</p>
+      <div class="lesson">
+        <div class="lesso">
+        <div class="lesson-icon">
+          <img style="width:100%;" src="img/gamis pr 1 edit.jpg" alt="html" />
+        </div>
+        <p style="word-wrap: break-word;">Light Grey</p>
         <p style="word-wrap:break-word; color: crimson;">Rp.185.000</p>
-        <a class="btn beli" href="#" align="center">Beli Produk</a>
-          </div>
-
-
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="img/gamis laki 2 edit.jpg" alt="html" />
-            </div>
-            <p style="word-wrap: break-word;">Tosca Black</p>
+        <div class="tombol">
+          <a class="beli" href="#" align="center">Beli Produk</a>
+        </div>
+        </div>
+      </div>
+      <div class="lesson">
+        <div class="lesso">
+        <div class="lesson-icon">
+          <img style="width:100%;" src="img/gamis laki 2 edit.jpg" alt="html" />
+        </div>
+        <p style="word-wrap: break-word;">Tosca Black</p>
         <p style="word-wrap:break-word; color: crimson;">Rp.80.000</p>
         <a class="btn beli" href="#" align="center">Beli Produk</a>
-          </div>
+        </div>
+      </div>
 
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="img/gamis pr 2 edit.jpg" alt="html" />
-            </div>
-            <p style="word-wrap: break-word;">Red Rose</p>
+      <div class="lesson">
+        <div class="lesso">
+        <div class="lesson-icon">
+          <img style="width:100%;" src="img/gamis pr 2 edit.jpg" alt="html" />
+        </div>
+        <p style="word-wrap: break-word;">Red Rose</p>
         <p style="word-wrap:break-word; color: crimson;">Rp.238.000</p>
         <a class="btn beli" href="#" align="center">Beli Produk</a>
-          </div>
-    </div>
-  </div>
-  </div>
-
-
-    <div class="second-wrapper">
-      <div class="container">
-        <div class="heading1">
-          <h2>YOI #IndonesiaMelangkah</h2>
-        </div>
-        <div class="konten">
-          <a  href="">
-            <img class="pev" src="img/pev.jpg">
-          </a>
-          <a href="">
-            <img class="pel" src="img/pel.jpg">
-          </a>
         </div>
       </div>
     </div>
+  </div>
+<!--END-->
 
-<div class="third-wrapper">
-  <div class="container">
-    <div class="heading2">
-      <h2>continue</h2>
+<!--ABOUT US-->
+<div class="team">
+  <div class="containe">
+    <div class="contain">
+      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">Hello World</div>
+      </div>
+    </div>
+  </div>
+  <div class="containe">
+    <div class="contain">
+      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">Hello World</div>
+      </div>
+    </div>
+  </div>
+  <div class="containe">
+    <div class="contain">
+      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">Hello World</div>
+      </div>
+    </div>
+  </div>
+  <div class="containe">
+    <div class="contain">
+      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">Hello World</div>
+      </div>
     </div>
   </div>
 </div>
+<!--END-->
 
 <footer class="footer">
     <div class="container">
