--- a/index.html
+++ b/index.html
@@ -86,12 +86,21 @@
         <a class="btn beli" href="#" align="center">Beli Produk</a>
         </div>
       </div>
+
     </div>
   </div>
 <!--END-->
 
 <!--ABOUT US-->
 <div class="team">
+  <div class="containe">
+    <div class="contain">
+      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <div class="overlay">
+        <div class="text">Hello World</div>
+      </div>
+    </div>
+  </div>
   <div class="containe">
     <div class="contain">
       <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
