--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>B.32-Toko Online Fashion</title>
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="shortcut icon" href="img/b32.jpg">
-  <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -38,143 +39,158 @@
   <div class="lesson-wrapper">
     <div class="judul">
       <div class="heading">
-        <h2>Produk Terbaru</h2>
+        <h2 style="font-size:32px;">Produk Terbaru</h2>
       </div>
     </div>
     <div class="lessons">
       <div class="lesson">
         <div class="lesso">
-        <div class="lesson-icon">
-          <img style="width:100%;"src="img/gamis laki 1 edit.jpg" alt="html" />
-        </div>
-        <p style="word-wrap: break-word;">Brown</p>
-        <p style="word-wrap:break-word; color: crimson;">Rp.150.000</p>
-        <a class="btn beli" href="#" align="center">Beli Produk</a>
-        </div>
-      </div>
-
-      <div class="lesson">
-        <div class="lesso">
-        <div class="lesson-icon">
-          <img style="width:100%;" src="img/gamis pr 1 edit.jpg" alt="html" />
-        </div>
-        <p style="word-wrap: break-word;">Light Grey</p>
-        <p style="word-wrap:break-word; color: crimson;">Rp.185.000</p>
-        <div class="tombol">
-          <a class="beli" href="#" align="center">Beli Produk</a>
-        </div>
-        </div>
-      </div>
-      <div class="lesson">
-        <div class="lesso">
-        <div class="lesson-icon">
-          <img style="width:100%;" src="img/gamis laki 2 edit.jpg" alt="html" />
-        </div>
-        <p style="word-wrap: break-word;">Tosca Black</p>
-        <p style="word-wrap:break-word; color: crimson;">Rp.80.000</p>
-        <a class="btn beli" href="#" align="center">Beli Produk</a>
+          <div class="lesson-icon">
+            <img style="width:100%;"src="img/gamis laki 1 edit.jpg" alt="html" />
+          </div>
+          <p style="word-wrap: break-word;">Brown</p>
+          <p style="word-wrap:break-word; color: crimson;">Rp.150.000</p>
+          <div class="bel">
+            <a class="beli" href="#" align="center">Beli Produk</a>
+          </div>
         </div>
       </div>
 
       <div class="lesson">
         <div class="lesso">
-        <div class="lesson-icon">
-          <img style="width:100%;" src="img/gamis pr 2 edit.jpg" alt="html" />
-        </div>
-        <p style="word-wrap: break-word;">Red Rose</p>
-        <p style="word-wrap:break-word; color: crimson;">Rp.238.000</p>
-        <a class="btn beli" href="#" align="center">Beli Produk</a>
+          <div class="lesson-icon">
+            <img style="width:100%;" src="img/gamis pr 1 edit.jpg" alt="html" />
+          </div>
+          <p style="word-wrap: break-word;">Light Grey</p>
+          <p style="word-wrap:break-word; color: crimson;">Rp.185.000</p>
+          <div class="bel">
+            <a class="beli" href="#" align="center">Beli Produk</a>
+          </div>
         </div>
       </div>
-
+      <div class="lesson">
+        <div class="lesso">
+          <div class="lesson-icon">
+            <img style="width:100%;" src="img/gamis laki 2 edit.jpg" alt="html" />
+          </div>
+          <p style="word-wrap: break-word;">Tosca Black</p>
+          <p style="word-wrap:break-word; color: crimson;">Rp.80.000</p>
+          <div class="bel">
+            <a class="beli" href="#" align="center">Beli Produk</a>
+          </div>
+        </div>
+      </div>
+      <div class="lesson">
+        <div class="lesso">
+          <div class="lesson-icon">
+            <img style="width:100%;" src="img/gamis pr 2 edit.jpg" alt="html" />
+          </div>
+          <p style="word-wrap: break-word;">Red Rose</p>
+          <p style="word-wrap:break-word; color: crimson;">Rp.238.000</p>
+          <div class="bel">
+            <a class="beli" href="#" align="center">Beli Produk</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <!--END-->
 
 <!--ABOUT US-->
 <div class="team">
+  <div class="judul">
+    <div class="heading">
+      <h2 style="font-size:32px;">About Us</h2>
+    </div>
+  </div>
   <div class="containe">
     <div class="contain">
-      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <img src="img/andi.jpeg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text">Hello World</div>
+        <div class="text">Andi</div>
       </div>
     </div>
   </div>
   <div class="containe">
     <div class="contain">
-      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <img src="img/syukron.jpeg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text">Hello World</div>
+        <div class="text">Ahmad Syukron Prasaja</div>
       </div>
     </div>
   </div>
   <div class="containe">
     <div class="contain">
-      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <img src="img/azizah.jpeg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text">Hello World</div>
+        <div class="text">Azizah Kuswandari</div>
       </div>
     </div>
   </div>
   <div class="containe">
     <div class="contain">
-      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <img src="img/foto1.jpeg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text">Hello World</div>
+        <div class="text">Bachtiar Yudha</div>
       </div>
     </div>
   </div>
   <div class="containe">
     <div class="contain">
-      <img src="img/gamis laki 1.jpg" alt="Avatar" class="image">
+      <img src="img/pngguru.com.png" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text">Hello World</div>
+        <div class="text">Ars</div>
       </div>
     </div>
   </div>
 </div>
 <!--END-->
 
-<footer class="footer">
+  <footer class="footer">
     <div class="container">
-        <div class="row">
-        <div class="col-sm-3">
-          <h4 class="title">Contact Us</h4>
-            <ul class="social-icon">
-            <div class="btn-wrapper">
-            <a href="#" class="btn signup">Email</a>
-            <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebook</a>
-            <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitter</a>
+      <div class="">
+        <div class="footer-about" style="width:50%;">
+          <h4 class="title">ABOUT</h4>
+          <div class="about-us">
+            <p><span class="b-32">B-32</span> adalah fashion online di Indonesia, kami menciptakan kemungkinan-kemungkinan gaya tanpa batas dengan cara memperluas jangkauan produk, mulai dari produk internasional hingga produk lokal dambaan. Kami menjadikan Anda sebagai pusatnya</p>
+          </div>
         </div>
-            </div>
-        <div class="col-sm-3">
-            <h4 class="title">Category</h4>
-            <div class="category">
-            <a href="#">men</a>
-            <a href="#">women</a>
-            <a href="#">boy</a>
-            <a href="#">girl</a>
-            <a href="#">bag</a>
-            <a href="#">T-shirt</a>
-            <a href="#">top</a>
-            <a href="#">shoes</a>
-            <a href="#">glass</a>
-            <a href="#">dress</a>
-            <a href="#">baby dress</a>
-            <a href="#">pants</a>
-            </div>
-            </div>
+        <div class="Category" style="width:20%;">
+          <h4 class="title">CATEGORY</h4>
+          <div class="kategori">
+            <ul class="footer-Category">
+              <li><a href="#">men</a></li>
+              <li><a href="#">women</a></li>
+              <li><a href="#">boy</a></li>
+              <li><a href="#">girl</a></li>
+              <li><a href="#">bag</a></li>
+              <li><a href="#">T-shirt</a></li>
+              <li><a href="#">shoes</a></li>
+              <li><a href="#">top</a></li>
+              <li><a href="#">glass</a></li>
+              <li><a href="#">dress</a></li>
+              <li><a href="#">baby dress</a></li>
+              <li><a href="#">pants</a></li>
+            </ul>
+          </div>
         </div>
-        <hr>
-
-        <div class="row text-center"> © 2020. Made by Group B-32.</div>
+        <div class="Contact" style="width:20%;">
+          <h4 class="title">CONTACT US</h4>
+          <div class="">
+            <div class="sosial">
+              <a href="#" class="con signup"><span class="fa fa-envelope"></span>Email</a>
+            </div>
+            <div class="sosial">
+              <a href="#" class="con facebook"><span class="fa fa-facebook"></span>Facebook</a>
+            </div>
+            <div class="sosial">
+              <a href="#" class="con twitter"><span class="fa fa-twitter"></span>Twitter</a>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+  </footer>
 
-
-    </footer>
-
-<script src="js/jquery-3.1.1.js"></script>
-<script src="js/bootstrap.js"></script>
 </body>
 </html>
