--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="header-left">
       <img class="logo" src="img/hed.jpg">
     </div>
+    <span class="fa fa-bars menu-icon"></span>
     <div class="header-right">
       <a class="login" href="#Koleksi">Koleksi</a>
       <a class="promo" href="#Promo">Promo</a>
