--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
   <div class="containe">
     <div class="contain">
-      <img src="img/pngguru.com.png" alt="Avatar" class="image">
+      <img src="img/ars.jpeg" alt="Avatar" class="image">
       <div class="overlay">
         <div class="text">Ars</div>
       </div>
