--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="contain">
       <img src="img/azizah.jpeg" alt="Avatar" class="image">
       <div class="overlay">
-        <div class="text">Azizah Kuswandari</div>
+        <div class="text">Azizah Kuswardini</div>
       </div>
     </div>
   </div>
